Bug 1736692 - Make GMP and ChromiumCDM decoders pass a non-null KnowsCompositor instance to VideoData::CreateAndCopyData, so that we can do optimized video frame upload. r=jrmuizel

This means that DRM-protected video on e.g. Netflix will now upload via IOSurface on macOS.
This is a prerequisite for hitting "detached" mode, which has very low power consumption.

Differential Revision: https://phabricator.services.mozilla.com/D128948